whale/demo-pod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-pod-deploy
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: demoApp
    spec:
      containers:
        - name: kubernetes-demo-container
          image: hcwxd/kubernetes-demo
          ports:
            - containerPort: 3000
  selector:
    matchLabels:
      app: demoApp
