whale/demo-pod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-pod-svc
spec:
  selector:
    app: demoApp
  type: NodePort
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
      nodePort: 30390
